# ruac

./: .author.json  .clang-format  .clangd  .current_author.config  .gitignore  .shared.sh  CMakeLists.txt  Cargo.toml  LICENSE  README.md  RUAC-BASH-STYLE-GUIDE.md  RUAC-CCXX-STYLE-GUIDE.md  RUAC-RULES.md  build_python3_execbin.sh  initcheck.sh  localbak.sh  makec++.sh  mkd.sh  mkfc.sh  mkfcxx.sh  release_buildc++.sh
config/: ruacdb.log.conf
src/cxx/include/component/: ruac_welcome.hpp
src/cxx/include/kernel/: ruac_controller.hpp
src/cxx/include/kernel/core/: ruac_data.hpp  ruac_type.hpp  ruac_vals.hpp
src/cxx/include/kernel/object/: ruac_object_kernel.hpp  ruac_object_multis.hpp  ruac_object_single.hpp
src/cxx/include/kernel/state/: ruac_state_kernel.hpp  ruac_state_multis.hpp  ruac_state_single.hpp
src/cxx/include/kernel/track/: ruac_track_kernel.hpp  ruac_track_multis.hpp  ruac_track_single.hpp
src/cxx/include/rlib/log/: ruac_log_exiting.hpp  ruac_log_loading.hpp  ruac_log_runtime.hpp
src/cxx/include/rstd/colored/: ruac_background.hpp  ruac_color.hpp
src/cxx/include/rstd/logsystem/: ruac_colors.hpp  (+22 more)
src/cxx/include/test/: ruac_c_tmp.h  ruac_test.hpp  ruac_test_logfile_parser.hpp  ruac_test_logsystem.hpp  ruac_test_main.hpp
src/cxx/src/: main.cpp
src/cxx/src/component/: ruac_welcome.cpp
src/cxx/src/kernel/: ruac_controller.cpp
src/cxx/src/test/: ruac_c_tmp.c  ruac_test.cpp  ruac_test_logfile_parser.cpp  ruac_test_logsystem.cpp  ruac_test_main.cpp
src/rpy/: ruac_py3_getosinfo.py
src/rst/: main  main.rs
src/rst/mods/: base_border.rs  mod.rs
(+35 files in other folders)
